@@ -10,7 +10,7 @@ XS-Python-Version: current, >=2.3
 Package: griffith
 Architecture: all
 Depends: ${python:Depends}, python-gtk2 (>= 2.8.6-1), python-glade2 (>= 2.8.6-1), python-sqlalchemy (>= 0.3.0-1), python-pysqlite2 (>= 2.3.0-1),  python-reportlab (>= 1.20debian-6), python-imaging (>= 1.1.5-6)
-Recommends: python-gnome2-extras (>= 2.14.0-1), python-psycopg2 (>= 1.1.21-6), python-mysqldb (>= 1.2.1-p2-2). python-sqlite
+Recommends: python-gnome2-extras (>= 2.14.0-1), python-psycopg2 (>= 1.1.21-6), python-mysqldb (>= 1.2.1-p2-2). python-chardet, python-sqlite
 Suggests: griffith-extra-artwork (>= 0.8)
 XB-Python-Version: ${python:Versions}
 Description: film collection manager
