@@ -585,7 +585,7 @@ def source_changed(self):
 def clone_movie(self):
 	treeselection = self.widgets['treeview'].get_selection()
 	(tmp_model, tmp_iter) = treeselection.get_selected()
-	if tmp_iter == None:
+	if tmp_iter is None:
 		return False
 	number = tmp_model.get_value(tmp_iter, 0)
 	movie = self.db.Movie.get_by(number=number)
