@@ -164,7 +164,7 @@ def cover_simple(self, id):
 		c.rotate(90)
 		c.drawString(60, (-pageWidth/2)-8, movie.o_title.encode('utf-8'))
 		c.rotate(-90)
-		if movie.image is not None:
+		if movie.image is not None and movie.image != '':
 			tmp_dest = self.locations['posters']
 			image = os.path.join(tmp_dest, str(movie.image)+".jpg")
 			c.drawImage(image, x=(pageWidth-30)/2, y=470, width=30, height=50)
