@@ -29,9 +29,9 @@ def delete_movie(self):
 	m_id = None
 	number, m_iter = self.get_maintree_selection()
 	movie = self.db.Movie.get_by(number=number)
-	if movie == None:
+	if movie is None:
 		gutils.error(self,_("You have no movies in your database"), self.widgets['window'])
-		return
+		return False
 	
 	if int(movie.loaned)==1:
 		gutils.warning(self, msg=_("You can't delete movie while it is loaned."))
