@@ -4,6 +4,13 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes, Piotr Ożarowski
 
+2006-12-16 Piotr Ożarowski <ozarow@gmail.com>
+	* WP movie plugin updated
+	* movie plugins:
+	  + allow "%s" in self.original_url_search and self.translated_url_search
+	  + opening new page inside movie plugin is now as easy as: "self.new_page =  self.open_page(url='http://something')"
+	* chardet added to optionsl dependencies
+
 2006-12-16 Jessica K. Parth <Jessica.K.P@women-at-work.org>
 	* added a warning when there are no movies in the database to ( print cover, fetch poster, change poster, edit movie, delete movie, clone movie )
 	* Import CSV Plugin updated (use chardet "http://chardet.feedparser.org/" to detect file format)
